[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/FractureParent.gd" type="Script" id=1]
[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/TestLevelScene.gd" type="Script" id=3]
[ext_resource path="res://scenes/Pool2DBasic.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/FractureBody.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/FractureShard.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/CutShapeVisualizer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Comic Sans MS.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/ScoreLabel.gd" type="Script" id=9]
[ext_resource path="res://scenes/WorldEnvironment.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/WaveFunctionCollapse.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.490196, 0.235294, 0.682353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.490196, 0.235294, 0.682353, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Gradient" id=12]
colors = PoolColorArray( 0, 0.6, 1, 1, 0, 0.6, 1, 1 )

[sub_resource type="GradientTexture2D" id=21]
gradient = SubResource( 12 )
width = 200
height = 20

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 1, 0, 0, 1, 0, 1, 0.636719, 1 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 14 )
width = 200
height = 20

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0, 0.6, 1, 1, 0, 0.6, 1, 1 )

[sub_resource type="GradientTexture2D" id=7]
gradient = SubResource( 6 )
width = 200
height = 20

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 0.941406, 0.0661926, 0, 1, 0, 1, 0.460938, 1 )

[sub_resource type="GradientTexture2D" id=9]
gradient = SubResource( 8 )
width = 200
height = 20
fill_from = Vector2( 1, 0 )
fill_to = Vector2( 0, 0 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.172549, 0.223529, 1 )

[sub_resource type="DynamicFont" id=15]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="TestLevelScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "PROTOTYPE"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -191.0
margin_top = -33.0
margin_right = 191.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "Press middle mouse button to open/hide instruction"
align = 1
valign = 1

[node name="LeftProgressBar" type="TextureProgress" parent="CanvasLayer"]
anchor_left = 0.4
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -99.0
max_value = 20.0
step = 0.1
texture_under = SubResource( 21 )
texture_progress = SubResource( 3 )
fill_mode = 1

[node name="RightProgressBar" type="TextureProgress" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.6
anchor_bottom = 0.8
max_value = 20.0
step = 0.1
texture_under = SubResource( 7 )
texture_progress = SubResource( 9 )

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 60.0
margin_right = 70.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "SCORE: 0"
align = 1
valign = 1
script = ExtResource( 9 )

[node name="InfoPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.8
margin_top = -140.0
margin_right = 224.8
margin_bottom = 140.0

[node name="Instruction" type="RichTextLabel" parent="CanvasLayer/InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 15 )
text = "Control info
1) Move mouse to move the bee
2) When the bee moves, the weapon spins around it
3) You also can rotate the weapon with mouse buttons
4) Press F to restart
5) Have fun"

[node name="FractureParent" type="Node2D" parent="."]
script = ExtResource( 1 )
fracture_body_color = Color( 0.454902, 0.12549, 0.85098, 1 )

[node name="WaveFunctionCollapse" parent="FractureParent" instance=ExtResource( 12 )]

[node name="Boundary" type="Node2D" parent="FractureParent"]

[node name="Pool_FractureBodies" parent="FractureParent" instance=ExtResource( 4 )]
placed_in_level = true
instance_template = ExtResource( 5 )
max_amount = 300
instantiate_new_on_empty = true

[node name="SlowdownTimer" type="Timer" parent="FractureParent"]
one_shot = true

[node name="BlobParent" type="Node2D" parent="FractureParent"]

[node name="SourceParent" type="Node2D" parent="FractureParent"]

[node name="Pool_FractureShards" parent="FractureParent" instance=ExtResource( 4 )]
placed_in_level = true
instance_template = ExtResource( 6 )
max_amount = 100
instantiate_new_on_empty = true
keep_instances_in_tree = true

[node name="Pool_CutVisualizer" parent="FractureParent" instance=ExtResource( 4 )]
placed_in_level = true
instance_template = ExtResource( 7 )
max_amount = 25
instantiate_new_on_empty = true
keep_instances_in_tree = true

[node name="WorldEnvironment" parent="." instance=ExtResource( 11 )]

[connection signal="Player_Is_Fighting" from="FractureParent" to="." method="_on_FractureParent_Player_Is_Fighting"]
[connection signal="timeout" from="FractureParent/SlowdownTimer" to="FractureParent" method="_on_SlowdownTimer_timeout"]
